[gd_scene load_steps=4 format=2]

[ext_resource path="res://gd/Player.gd" type="Script" id=1]
[ext_resource path="res://NES - Space Invaders JPN - General Sprites.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]
resource_name = "die"
length = 0.15
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite2:region_enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite2:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0166667, 0.0333333, 0.05, 0.0666667, 0.0833333, 0.1, 0.116667, 0.133333, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 147, 63, 15, 8 ), Rect2( 147, 63, 15, 8 ), Rect2( 147, 63, 15, 8 ), Rect2( 147, 63, 15, 8 ), Rect2( 147, 63, 15, 8 ), Rect2( 132, 63, 13, 8 ), Rect2( 132, 63, 13, 8 ), Rect2( 132, 63, 13, 8 ), Rect2( 132, 63, 13, 8 ), Rect2( 132, 63, 13, 8 ) ]
}

[node name="Player" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0.0352941, 1, 0.0980392, 1 )
position = Vector2( 0, -4 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 115, 63, 11, 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2( 0.504666, 0 )
polygon = PoolVector2Array( -6, 0, -6, -4, -5, -4, -5, -5, -2, -5, -2, -7, -1, -7, -1, -8, 0, -8, 0, -7, 1, -7, 1, -5, 4, -5, 4, -4, 5, -4, 5, 0 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/die = SubResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
